@startuml Sources Data Model
!theme plain
skinparam linetype ortho
skinparam packageStyle rectangle

entity "Collection" as Collection {
  * id : INTEGER <<PK>>
  --
  * name : VARCHAR(255) <<UK>>
  notes : TEXT
  platform : VARCHAR(100)
  public : BOOLEAN
  featured : BOOLEAN
  managed : BOOLEAN
  created_at : TIMESTAMP
  modified_at : TIMESTAMP
}

entity "Source" as Source {
  * id : INTEGER <<PK>>
  --
  name : VARCHAR(1000)
  url_search_string : VARCHAR(1000)
  label : VARCHAR(255)
  * homepage : VARCHAR(4000)
  notes : TEXT
  platform : VARCHAR(100)
  media_type : VARCHAR(100)
  stories_per_week : INTEGER
  first_story : TIMESTAMP
  pub_country : VARCHAR(5)
  pub_state : VARCHAR(200)
  primary_language : VARCHAR(5)
  alerted : BOOLEAN
  last_rescraped : TIMESTAMP
  last_rescraped_msg : VARCHAR(500)
  search_vector : TSVECTOR
  created_at : TIMESTAMP
  modified_at : TIMESTAMP
}

entity "Feed" as Feed {
  * id : INTEGER <<PK>>
  --
  * url : TEXT <<UK>>
  admin_rss_enabled : BOOLEAN
  name : TEXT
  created_at : TIMESTAMP
  modified_at : TIMESTAMP
}

entity "AlternativeDomain" as AlternativeDomain {
  * id : INTEGER <<PK>>
  --
  * domain : VARCHAR(255) <<UK>>
  created_at : TIMESTAMP
  modified_at : TIMESTAMP
}

Collection ||--o{ Source : "organizes"
Source ||--o{ Feed : "publishes"
Source ||--o{ AlternativeDomain : "identified_by"

note right of Collection
  Collections are organizational
  groupings of media sources.
  Each collection can contain
  multiple sources, and sources
  can belong to multiple collections.
end note

note right of Source
  Sources represent individual
  media organizations or outlets.
  Each source has a canonical
  domain name and may publish
  multiple RSS feeds.
end note

note right of Feed
  Feeds represent individual
  RSS or news sitemap endpoints
  that belong to a source.
  Each feed URL is unique
  across the system.
end note

note right of AlternativeDomain
  Alternative domains represent
  additional domain names that
  may be used to identify the
  same source (e.g., www and
  non-www variants).
end note

@enduml


